less/widgets/forms.less
/* ... */
// ------------------------------
// #Radio Buttons and Checkboxes
// ------------------------------

.widget .form {
	.option-list,
	[class*="form-group--terms"] {
		margin-top: 1em;

		.label--radio,
		.label--checkbox,
		label[for*="input--terms"],
		label[for*="input--terms"] span a.form__link {
			.paragraph;
			line-height: 1.3em;

            .style--light & {
                color: @contrast--light;
            }

            .style--accent & {
                color: @contrast--accent;
            }

            .style--dark & {
                color: @contrast--dark;
            }
		}

		input[type="radio"],
		input[type="checkbox"] {
			opacity: 0;
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			margin: 0 !important;
			padding: 0 !important;
			width: 100% !important;
			height: 100% !important;

			&:hover + label:before {
				border: 2px solid darken(@color__form--border, 8%);

                .style--light & {
                    border-color: darken(@color--light, 15%);
                }

                .style--accent & {
                    border-color: fade(@contrast--accent, 95%);
                }

                .style--dark & {
                    border-color: fade(@contrast--dark, 95%);
                }
			}

			&:checked + label:before {
				border: 2px solid @color__button--background;

                .style--light & {
                    border-color: @contrast--light;
                }

                .style--accent & {
                    border-color: @contrast--accent;
                }

                .style--dark & {
                    border-color: @contrast--dark;
                }
			}

			&:checked + label:after {
				opacity: 1;
			}

			&:focus + label:before,
			&:focus:checked + label:before {
				border: 2px solid @color-highlight--light;
			}
		}

		.option-item--radio,
		.option-item--checkbox,
		&[class*="form-group"] {
			position: relative;
			width: 100%;
			margin-bottom: @font__p--line-height / 2;
			padding: 0;

			label {
				position: relative;
				cursor: pointer;
				display: block;
				margin-left: 1em * 2.5;
				.transform-scale(1);
				
				&:before,
				&:after {
					cursor: pointer;
				}

				&:before {
					content: " ";
					position: absolute;
					top: 0.7em;
					left: -2.5em;
					width: 1.5em;
					height: 1.5em;
					margin-top: -0.8em;
					background-color: #fff;
					border: 2px solid @color__form--border;

                    .style--light & {
                        background-color: @color--light;
                        border-color: darken(@color--light, 10%);
                    }

                    .style--accent & {
                        background-color: @color--accent;
                        border-color: fade(@contrast--accent, 95%);
                    }

                    .style--dark & {
                        background-color: @color--dark;
                        border-color: fade(@contrast--dark, 95%);
                    }
				}

				&:after {
					opacity: 0;
					position: absolute;
					.transition(opacity, 0.1s);
				}
			}
		}

		.option-item--radio {
			label {
				&:before {
					.border-radius(1em);
				}
				&:after {
					content: " ";
					.border-radius(1em);
					background-color: @color__button--background;
					top: 0.7em;
					left: -2.5em;
					width: 1.5em;
					height: 1.5em;
					margin-top: -0.8em;
					.transform-scale(0.5);

                    .style--light & {
                        background-color: @contrast--light;
                    }

                    .style--accent & {
                        background-color: @contrast--accent;
                    }

                    .style--dark & {
                        background-color: @contrast--dark;
                    }
				}
			}
		}

		.option-item--checkbox,
		&[class*="form-group"] {
			label {
				&:after {
					content: "\f00c";
					font-family: 'FontAwesome', sans-serif;
					color: @color__button--background;
					left: -40px;

                    @media @mobile {
                        left: -32px;
                    }
				}
			}
		}
	}
	
	[class*="form-group--terms"] {
		margin-top: 2em;
	}
}

// ------------------------------
// #Dropdowns
// ------------------------------

// Select Wrap

.select-wrap {
    position: relative;
    max-width: 50%;
	margin-top: 1em;

    @media @mobile {
        max-width: 100%;
    }
	
    // Icon

    &:before {
        content: '\f107';
        font-family: 'FontAwesome', sans-serif;
        display: inline-block;
        height: 1em;
        line-height: 1em;
        text-align: center;
		font-size: 1.5em;
        color: @color__p--text;
        position: absolute;
        right: 0.5em;
        top: 50%;
        margin-top: -0.5em;

		@media @mobile {
			font-size: 2em;
		}

        .style--light & {
            color: @contrast--light;
        }

        .style--accent & {
            color: @contrast--accent;
        }

        .style--dark & {
            color: @contrast--dark;
        }
    }
}
/* ... */

